<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DashBoard</string>
    <string name="information">Information</string>
    <string name="about">About</string>
    <string name="product">Product Model</string>
    <string name="product_desc">"F3:Warm white steady--Multi steady--OFF\nF4:Warm white steady--Multi steady--Multi and warm white transform fade--OFF\nF5:Warm white steady--Multi steady--Warm white fade--multi and warm white transform fade--OFF\nF6:Warm white steady--warm white flash--Multi steady--Multi flash--OFF"</string>
    <string name="company_address">东莞市南城区亨美水濂澎洞工业区C区C6栋\nBuilding C6,Block C,Shuilian Pengdong Industrial area,Hengmei,Nancheng\n\nTel:(86)769-82310676 83038752\nFax:(86)769-83038753</string>
    <string name="app_version">APP Version</string>
    <string name="app_version_text">XmasTree Ver 1.0</string>
        
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="ble_not_supported">手机不支持4.0蓝牙</string>
    <string name="unknown_device">未知设备</string>
    <string name="device_connected">已连接</string>
    <string name="device_discontected">未连接</string>
    <string name="no_selected_device">未选择已连接的设备</string>
    <string name="company_name">飞扬灯饰科技有限公司\nJETMAX LIGHTING CO LTD.</string>
    
    <string name="menu_dashborad">Dash Board</string>
    <string name="menu_dualcolor">Dual Color 12 Functions</string>
    <string name="menu_rgb">RGB 40 Functions</string>
    
    <string name="two_hour">2 Hour</string>
    <string name="four_hour">4 Hour</string>
    <string name="six_hour">6 Hour</string>
    <string name="eight_hour">8 Hour</string>
    <string name="ten_hour">10 Hour</string>
    <string name="twelve_hour">12 Hour</string>
    
    <string name="clock_remain_time">"倒计时:%1$d时%2$s分"</string>
    <string name="chrismas_tree_music">Chrismas tree Music</string>
    <string name="my_music">My Music</string>
    
    <item type="id" name="led_item_position"></item>
    
    <string name="btnPlayorPause">PlAY/PAUSE</string>
    <string name="btnStop">STOP</string>
    <string name="btnQuit">QUIT</string>
    <string name="btnPre">PREVIOUS</string>
    <string name="btnNext">NEXT</string>

    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="pause">Pause</string>
    <string name="musicDir">/Music/You.mp3</string>
    <string name="musicDir1">/Music/仙剑奇侠传六-主题曲-《剑客不能说》.mp3</string>
    <string name="musicDir2">/Music/仙剑奇侠传六-主题曲-《誓言成晖》.mp3</string>
    <string name="musicDir3">/Music/仙剑奇侠传六-主题曲-《镜中人》.mp3</string>
    <string name="musicDir4">/Music/仙剑奇侠传六-主题曲-《浪花》.mp3</string>
    
</resources>
