<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
    <include layout="@layout/main_title_layout"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"
        />
    
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/about"
       android:textColor="@color/title_text_color"
       android:textSize="18sp"
       android:paddingLeft="10dp"
       android:paddingTop="10dp"
       android:paddingBottom="10dp" 
       android:background="@color/title_bg"
       />
    
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
       
       <ImageView 
           android:layout_width="60dp"
           android:layout_height="60dp"
           android:background="@drawable/ic_logo"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           android:layout_marginRight="10dp"
           />
       
       <TextView 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/company_name"
           android:layout_gravity="center_vertical"
           android:textSize="16sp"
           />
       
   </LinearLayout>
   
   <View 
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/line_color"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      />
   
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/product"
       android:textSize="16sp"
       android:paddingLeft="10dp"
       android:paddingTop="10dp"
       android:paddingBottom="10dp" 
       />
   
   
   <ImageView 
      android:layout_width="wrap_content"
      android:layout_height="84dp"
      android:src="@drawable/ic_product_model"
      />
   
  <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/product_desc"
       android:textSize="16sp"
       android:padding="10dp"
       />
   
   <View 
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/line_color"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      />
   
   
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/company_address"
       android:textSize="16sp"
       android:padding="10dp"
       />
   
   
   <View 
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/line_color"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      />
   
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/app_version"
       android:textColor="@color/title_text_color"
       android:textSize="18sp"
       android:padding="10dp"
       android:background="@color/title_bg"
       />
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
       
       <ImageView 
           android:layout_width="60dp"
           android:layout_height="60dp"
           android:background="@drawable/ic_xmastree_logo"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           android:layout_marginRight="10dp"
           />
       
       <TextView 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/app_version_text"
           android:layout_gravity="center_vertical"
           android:textSize="16sp"
           />
       
   </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>